changed carruselList bg to black

--- a/src/galería/App.scss
+++ b/src/galería/App.scss
@@ -66,6 +66,7 @@ body {
   border: $border;
   border-radius: $borderRadius;
   border-color: $color3;
+  background-color: #000000;
 }
 
 .labeling {
